# np-notebooks-launcher

./: README.md  SPECS.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  publish.yaml
notebooks/: README.md  dynamic_routing.ipynb
src/np_notebooks_launcher/: __init__.py
tests/: test_launcher.py
