[project]
name = "np-notebooks-launcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bjhardcastle", email = "ben.hardcastle@alleninstitute.org" }
]
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = ["pytest>=8"]

[project.scripts]
launch = "np_notebooks_launcher:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
